# super-duper-chainsaw

./: README.md  pyproject.toml  requirements.txt  test_structure.py
.github/workflows/: ci.yml
data/: patients.csv
pipeline/: __init__.py  main.py
pipeline/bronze/: __init__.py  bronze_layer.py
pipeline/config/: optimization.py
pipeline/dags/: __init__.py  healthcare_pipeline.py
pipeline/gold/: gold_layer.py
pipeline/silver/: __init__.py  silver_layer.py
pipeline/tests/: __init__.py  conftest.py  test_bronze_layer.py  test_gold_layer.py  test_integration.py  test_silver_layer.py
