[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "healthcare-pipeline"
version = "1.0.0"
description = "AI-Powered Healthcare Data Pipeline with Medallion Architecture"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Healthcare Pipeline Team", email = "team@healthcare-pipeline.com"},
]
keywords = ["healthcare", "data-pipeline", "pyspark", "medallion-architecture", "etl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pyspark>=3.4.0,<3.6.0",
    "delta-spark>=2.4.0,<3.1.0",
    "pyarrow>=12.0.0,<15.0.0",
    "prefect>=2.14.0,<3.0.0",
    "pandas>=2.0.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "structlog>=23.0.0,<24.0.0",
    "python-dateutil>=2.8.0,<3.0.0",
    "pytz>=2023.0",
    "black>=23.0.0,<24.0.0",
    "flake8>=6.0.0,<7.0.0",
    "mypy>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "safety>=2.0.0",
    "bandit>=1.7.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Rajputsuraj11/super-duper-chainsaw"
Repository = "https://github.com/Rajputsuraj11/super-duper-chainsaw.git"
"Bug Tracker" = "https://github.com/Rajputsuraj11/super-duper-chainsaw/issues"

[project.scripts]
test = "pytest pipeline/tests/"
lint = "flake8 pipeline/ && mypy pipeline/"
build = "python -m build"

[tool.setuptools.packages.find]
where = ["pipeline"]

[tool.black]
line-length = 127
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["pipeline/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=pipeline --cov-report=term-missing"
